--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,5 @@ url: "http://erresen.github.io" # the base hostname & protocol for your site
 github_username:  erresen
 
 # Build settings
-markdown: GFM
+kramdown:
+  input: GFM
