--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: erresen.github.io
 description: > # this means to ignore newlines until "baseurl:"
   a programmer's blog about programming
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://erresen.github.io" # the base hostname & protocol for your site
+url: "https://erresen.github.io" # the base hostname & protocol for your site
 #twitter_username: erresen
 github_username:  erresen
 
