--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   a programmer's blog about programming
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://erresen.github.io" # the base hostname & protocol for your site
-#twitter_username: erresen
+twitter_username: erresen
 github_username:  erresen
 
 # Build settings
